overflow fixed

--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -54,7 +54,7 @@ p
 
 .section
   height: 100vh
-  //overflow: hidden
+  overflow: hidden
   -webkit-overflow-scrolling: touch
 
 ::-webkit-scrollbar
@@ -66,12 +66,12 @@ p
   background-color: transparent
 #first-section
   height: 100vh
-  //overflow: hidden
+  overflow: hidden
 
 #section-banner
   //height: 82%
   height: 80vh
-  //overflow: hidden
+  overflow: hidden
   position: relative
 
 .inner-content-section-banner
@@ -587,7 +587,7 @@ p
   height: 100vh
   display: flex
   align-items: center
-  //overflow: hidden
+  overflow: hidden
 
 .outdoor-section__text
   width: 30%
@@ -713,9 +713,13 @@ p
 .section
   background-color: $primary-color
 
+#section-instagram
+  overflow: auto
+
 .section-instagram
-  min-height: 100vh
+  //min-height: 100vh
   background: $primary-color
+  //overflow: hidden
 
 .section-instagram-followers
   font-family: $primary-font
@@ -749,6 +753,8 @@ p
 
 
 
+
+
 .hover-location
   visibility: hidden
   position: absolute
@@ -771,9 +777,9 @@ p
 /*section contact*/
 .section-contact
   min-height: 100vh
-  //height: auto
+  
 #section-contact
-  //overflow: hidden
+  overflow: hidden
   height: 100vh
   min-height: 800px
 #section-contact .row
